# Language-Classifier

./: .gitignore  Data_cleaning.ipynb  Dockerfile  Pipfile  README.MD  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
configurations/: config-logger.json
data/processed/: Language Detection Clean Undersampling.csv  Language Detection Clean.csv
language_classifier/: const.py  main.py  main_docker.py
language_classifier/api/: __init__.py  prediction_route.py
language_classifier/logging_module/: __init__.py  logger_initalizer.py
language_classifier/services/: __init__.py  data_preparation_service.py  model_loader_service.py  prediction_service.py
models/: lr_bow.pkl  lr_tfidf.pkl  lr_tfidf_und.pkl  nb_bow.pkl  nb_bow_und.pkl  nb_tfidf.pkl
notebooks/: 1-Data_exploration.ipynb  2-Data_cleaning.ipynb  3-Train_model.ipynb  4-Model_evaluation.ipynb  Data_cleaning.ipynb  Data_exploration.ipynb  Model_evaluation.ipynb  Train_model.ipynb  __init__.py  commons.py
src/: main.py
tests/: __init__.py  test_clean_text.py  test_prediction.py
vectorizers/: vectorizer_bow.pkl  vectorizer_bow_und.pkl  vectorizer_tfidf.pkl  vectorizer_tfidf_und.pkl
